fix: fix subscribe text width on small screens

--- a/src/scss/layout/_subscribe-section.scss
+++ b/src/scss/layout/_subscribe-section.scss
@@ -27,7 +27,10 @@
 .wrapper-flex {
   display: flex;
   align-items: flex-start;
-  width: 65%;
+
+  @media (min-width: $medium) {
+    width: 65%;
+  }
 }
 
 .subscribe-text {
